kubernetes/local/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tradevault-api
  namespace: tradevault
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tradevault-api
  template:
    metadata:
      labels:
        app: tradevault-api
    spec:
      containers:
        - name: tradevault-api
          image: sagardave/tradevault-api:39b9d1b923edcb61ae8e06f81e5a280ca6364df1
          imagePullPolicy: Always
          
          ports:
            - containerPort: 8000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10
