kubernetes/local/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tradevault-ingress
  namespace: tradevault
spec:
  ingressClassName: nginx
  rules:
    - host: tradevault.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tradevault-api
                port:
                  number: 8000
